# cascade-memory

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cascade_memory/: __init__.py  client.py  core.py  decay.py  errors.py  models.py
src/cascade_memory/embedders/: fake.py  gemini.py
src/cascade_memory/extractors/: anthropic.py
src/cascade_memory/protocols/: embedder.py  extractor.py  store.py
src/cascade_memory/stores/: memory.py  supabase.py
src/cascade_memory/stores/migrations/: 001_memory.sql.template
tests/: conftest.py  test_anthropic_extractor.py  test_client.py  test_core.py  test_decay.py  test_fake_embedder.py  test_gemini_embedder.py  test_imports.py  test_in_memory_store.py  test_integration.py  test_models.py  test_protocols.py  test_supabase_store.py
